Firsts changes to get Mysql support

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -81,7 +81,15 @@ eggs =
     lotomidas.dexterity
     lotomidas.policy
     iw.debug
-    
+
+zcml-additional =
+    <configure xmlns="http://namespaces.zope.org/zope"
+                xmlns:db="http://namespaces.zope.org/db">
+        <include package="z3c.saconfig" file="meta.zcml" />
+        <db:engine name="lotomidas" url="mysql://root@localhost/loteria" />
+        <db:session engine="optilux" />
+    </configure>
+
 
 # Optional Functionality
 # ----------------------
