Small test with unprotected python

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -76,6 +76,7 @@ eggs =
     Plone
     Pillow
     lxml
+    Products.enablesettrace
     plone.app.dexterity
     lotomidas.content
     lotomidas.dexterity
@@ -84,6 +85,8 @@ eggs =
     iw.debug
     ipython
     Products.Clouseau
+    Products.PDBDebugMode
+    Products.TrustedExecutables
 
 zcml-additional =
     <configure xmlns="http://namespaces.zope.org/zope"
@@ -153,11 +156,11 @@ develop =
 # Change debug-mode to "on" to run in development mode.
 # This will dramatically slow Plone.
 # 
-debug-mode = off
+debug-mode = on
 # Add-on developers should turn deprecation warnings on
-deprecation-warnings = off
+deprecation-warnings = on
 # change verbose-security to "on" for useful security errors while developing
-verbose-security = off
+verbose-security = on
 
 
 ############################################
