--- a/buildout.cfg
+++ b/buildout.cfg
@@ -87,6 +87,8 @@ eggs =
     Products.Clouseau
     Products.PDBDebugMode
     Products.TrustedExecutables
+    plone.app.debugtoolbar
+    Paste
 
 zcml-additional =
     <configure xmlns="http://namespaces.zope.org/zope"
